--- a/ScandiHome/ScandiHome/EPR/ENT/frmENT_Order.resx
+++ b/ScandiHome/ScandiHome/EPR/ENT/frmENT_Order.resx
@@ -256,4 +256,7 @@
         c3ZnPgs=
 </value>
   </data>
+  <metadata name="openFileDlg.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
